feature: configurable summary